# apzkr-pzpi-21-1-stoianov-stanislav

./: README.md  apzkr-pzpi-21-1-stoianov-stanislav.txt
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/: .gitignore  Cargo.toml  atlas.hcl  docker-compose.yaml  schema.sql
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/config/: development.yaml  production.yaml
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/migrations/: 20240601210250_add_user_table.sql  20240602170406_add_user_name.sql  20240602175916_add_user_role.sql  20240602180150_add_libraries.sql  20240604104505_add_books.sql  20240604174149_add_library_rates.sql  20240604190326_add_lendings.sql  atlas.sum
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/src/: backup.rs  config.rs  database.rs  error.rs  id.rs  lib.rs  state.rs  telemetry.rs
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/src/auth/: email.rs  mod.rs  name.rs  password.rs  role.rs  sign_in.rs  sign_up.rs  token.rs  user.rs
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/src/books/: add.rs  author.rs  delete.rs  genre.rs  mod.rs  name.rs  owner.rs  update.rs  view.rs  year.rs
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/src/http/: auth.rs  backup.rs  error.rs  lendings.rs  libraries.rs  mod.rs
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/src/lendings/: active.rs  due_date.rs  lend.rs  lending_date.rs  mod.rs  return_date.rs  returns.rs
apzkr-pzpi-21-1-stoianov-stanislav/Task1-Server/src/libraries/: add.rs  address.rs  currency.rs  daily_rate.rs  (+7 more)
apzkr-pzpi-21-1-stoianov-stanislav/Task2-IoT/: Cargo.toml  flake.nix
apzkr-pzpi-21-1-stoianov-stanislav/Task2-IoT/src/: lib.rs
(+18 files in other folders)
